--- a/Js_local_WorkingCopy.conf
+++ b/Js_local_WorkingCopy.conf
@@ -43,8 +43,8 @@ https://api.live.bilibili.com/xlive/app-room/v1/index/getInfoByRoom?access_key u
 ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x\/v2\/account\/myinfo\?)|(x\/v2\/account/mine\?)) url script-response-body nzw9314/NobyDa/QuantumultX/File/bilifj.js
 
 # 抖音去广告去水印 (By Choler)
-^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url nzw9314/script-request-header NobyDa/Surge/JS/Aweme.js
-^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url nzw9314/script-response-body NobyDa/Surge/JS/Aweme.js
+^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-request-header nzw9314/NobyDa/Surge/JS/Aweme.js
+^https?:\/\/.+?\.amemv\.com\/aweme\/v\d\/(feed|aweme\/post|follow\/feed|nearby\/feed|search\/item|general\/search\/single|hot\/search\/video\/list)\/ url script-response-body nzw9314/NobyDa/Surge/JS/Aweme.js
 
 
 # 酷我音乐SVIP (By yxiaocai)
